--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
+    <meta charset="UTF-8">
+    <meta name="description" content="git lecture">
     <title>
         git lecteure
     </title>
