--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
     <meta name="description" content="git lecture">
     <title>
         git lecteure
+        dfaegarg
+        geaga
     </title>
 </html>
